--- a/PROJET_PPE2.1_KARATE/PPE2.1_KARATE/PPE2.1_KARATE.vbproj
+++ b/PROJET_PPE2.1_KARATE/PPE2.1_KARATE/PPE2.1_KARATE.vbproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9CE65AE3-58C8-49D7-8DA7-7ADE0BC2BDA6}</ProjectGuid>
+    <ProjectGuid>{6C2648F4-3B2B-474F-B899-1373B9E3A742}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>TEST_GIT.My.MyApplication</StartupObject>
-    <RootNamespace>TEST_GIT</RootNamespace>
-    <AssemblyName>TEST_GIT</AssemblyName>
+    <StartupObject>PPE2._1_KARATE.My.MyApplication</StartupObject>
+    <RootNamespace>PPE2._1_KARATE</RootNamespace>
+    <AssemblyName>PPE2.1_KARATE</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -16,13 +16,13 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>TEST_GIT.xml</DocumentationFile>
+    <DocumentationFile>PPE2.1_KARATE.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,7 +32,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>TEST_GIT.xml</DocumentationFile>
+    <DocumentationFile>PPE2.1_KARATE.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -46,6 +46,27 @@
   </PropertyGroup>
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <DefineDebug>true</DefineDebug>
+    <DefineTrace>true</DefineTrace>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DocumentationFile>PPE2.1_KARATE.xml</DocumentationFile>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <DefineTrace>true</DefineTrace>
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DocumentationFile>PPE2.1_KARATE.xml</DocumentationFile>
+    <Optimize>true</Optimize>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -73,17 +94,42 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.vb">
+    <Compile Include="Formulaire_Membre_Connexion.Designer.vb">
+      <DependentUpon>Formulaire_Membre_Connexion.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Formulaire_Membre_Connexion.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="Form_Membre_AJ.Designer.vb">
+      <DependentUpon>Form_Membre_AJ.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_Membre_AJ.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form_Membre_CA.Designer.vb">
+      <DependentUpon>Form_Membre_CA.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_Membre_CA.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Membre_Modif.Designer.vb">
+      <DependentUpon>Form_Membre_Modif.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_Membre_Modif.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Membre_Rechercher.Designer.vb">
+      <DependentUpon>Form_Membre_Rechercher.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_Membre_Rechercher.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModuleConnexion.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -97,6 +143,21 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Formulaire_Membre_Connexion.resx">
+      <DependentUpon>Formulaire_Membre_Connexion.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Membre_AJ.resx">
+      <DependentUpon>Form_Membre_AJ.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Membre_CA.resx">
+      <DependentUpon>Form_Membre_CA.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Membre_Modif.resx">
+      <DependentUpon>Form_Membre_Modif.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Membre_Rechercher.resx">
+      <DependentUpon>Form_Membre_Rechercher.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
